--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
         width: 24px;
         height: auto;
         display: flex;
-        
+        justify-content: space-between;
+        gap: 10px
     }
 }
 
